test: clear the test source lint warnings
Remove the cases of unused try-with-resources resources, redundant
casts, raw types and a missing serialVersionUID in the tests.

- close the NetCDF writers explicitly where they were only opened for
  their close semantics
- drop the redundant casts to the already-typed variables and qualify
  the static helper calls by the type name